[package]
name = "executor-trait"
version = "0.6.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A collection of traits to define a common interface across executors"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/executor-trait"
homepage = "https://github.com/Keruspe/executor-trait"
documentation = "https://docs.rs/executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
async-trait = "^0.1.42"
