[package]
name = "executor-trait"
version = "2.1.2"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A collection of traits to define a common interface across executors"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
async-trait = "^0.1.42"

[workspace]
members = [".", "async-global-executor-trait", "async-executor-trait", "tokio-executor-trait", "smol-executor-trait"]

[badges]
maintenance = { status = "actively-developed" }
