[package]
name = "bastion-executor-trait"
version = "0.5.2"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "executor-trait implementation for bastion"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/bastion-executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.56.0"

[dependencies]
async-trait = "^0.1.42"
bastion = "^0.4"
lightproc = "^0.3"

[dependencies.executor-trait]
version = "^2.0"
path = ".."

[badges]
maintenance = { status = "actively-developed" }
