[package]
name = "smol-executor-trait"
version = "2.1.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "executor-trait implementation for smol"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/smol-executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.56.0"

[dependencies]
async-trait = "^0.1.42"
blocking = "^1.0"
smol = "^1.0"

[dependencies.executor-trait]
version = "^2.1"
path = ".."

[badges]
maintenance = { status = "actively-developed" }
