[package]
name = "tokio-executor-trait"
version = "3.0.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "executor-trait implementation for tokio"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/tokio-executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.85.0"

[features]
tracing = ["dep:tracing", "dep:tracing-futures"]

[dependencies]
async-trait = "^0.1.42"

[dependencies.executor-trait]
version = "^3.0"
path = ".."

[dependencies.tokio]
version = "^1.4"
default-features = false
features = ["rt-multi-thread"]

[dependencies.tracing]
version = "^0.1"
optional = true

[dependencies.tracing-futures]
version = "^0.2"
optional = true

[badges]
maintenance = { status = "actively-developed" }
