[package]
name = "tokio-executor-trait"
version = "2.4.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "executor-trait implementation for tokio"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/tokio-executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.80.0"

[dependencies]
async-trait = "^0.1.42"
tracing = { version = "^0.1", optional = true }
tracing-futures = { version = "^0.2", optional = true }

[features]
tracing = ["dep:tracing", "tracing-futures"]

[dependencies.tokio]
version = "^1.4"
default-features = false
features = ["rt-multi-thread"]

[dependencies.executor-trait]
version = "^2.1"
path = ".."

[badges]
maintenance = { status = "actively-developed" }
