[package]
name = "tokio-executor-trait"
version = "3.1.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "executor-trait implementation for tokio"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/amqp-rs/executor-trait"
homepage = "https://github.com/amqp-rs/executor-trait"
documentation = "https://docs.rs/tokio-executor-trait"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.85.0"

[features]
tracing = ["dep:tracing", "dep:tracing-futures", "tokio-executor-trait-2/tracing"]

[dependencies]
async-trait = "^0.1.42"

[dependencies.executor-trait]
version = "^3.0"
path = ".."

[dependencies.executor-trait-2]
package = "executor-trait"
version = "^2.1"

[dependencies.tokio]
version = "^1.4"
default-features = false
features = ["rt-multi-thread"]

[dependencies.tokio-executor-trait-2]
package = "tokio-executor-trait"
version = "^2.3"

[dependencies.tracing]
version = "^0.1"
optional = true

[dependencies.tracing-futures]
version = "^0.2"
optional = true

[badges]
maintenance = { status = "passively-developed" } # use async-rs instead
